# sonyflakepp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sonyflakepp/: sonyflake.hpp
test/: test_Sonyflakepp.cpp
